# auv_ws

./: .dockerignore  .gitignore  Dockerfile  README.md  build_  check_coriolis  tree.py
rosbag2_2025_08_28-18_55_19/: metadata.yaml  rosbag2_2025_08_28-18_55_19_0.db3
src/auv_control/: CMakeLists.txt  package.xml
src/auv_control/config/: config.json
src/auv_control/include/auv_control/control/: fossennet.h  model_inference.h
src/auv_control/include/auv_control/mapping/: config.h  environment.h
src/auv_control/include/auv_control/mission/: mission.h  mission_imp.h  mission_sonar_imp.h
src/auv_control/include/auv_control/system/: auv_orchestrator_node.hpp  control_system.h  environment_system.h  mission_system.h  motion_system.h
src/auv_control/launch/: sim_with_control.launch.py
src/auv_control/models/fossen_net_1/: fossen_net_scripted.pt  scalers.json
src/auv_control/models/fossen_net_2/: fossen_net_scripted.pt  scalers.json
src/auv_control/models/fossen_net_3/: fossen_net_scripted.pt  scalers.json
src/auv_control/msg/: CommandTopic.msg  EnvironmentTopic.msg  MissionTopic.msg  MotionTopic.msg  SignalTopic.msg  StateTopic.msg  TestSonarTopic.msg  TrajectoryPoint.msg
src/auv_control/src/control/: fossennet.cpp  model_inference.cpp
src/auv_control/src/mapping/: environment_astar.cu  environment_global.cu  environment_helper.cpp  environment_map.cu
src/auv_control/src/mission/: mission_sonar_imp.cpp
src/auv_control/src/system/: auv_orchestrator_node.cpp  control_system.cpp  environment_system.cpp  mission_system.cpp  motion_system.cpp
src/auv_control/srv/: GetStatus.srv  SetMission.srv  Trigger.srv
src/gazebo_sim/: CMakeLists copy.txt  CMakeLists.txt  package.xml
src/gazebo_sim/config/: config.json
src/gazebo_sim/include/gazebo_sim/: auv_dynamics_plugin.h  vehicle_model.h
src/gazebo_sim/launch/: auv.launch.py
src/gazebo_sim/scripts/: keyboard_teleop.py
src/gazebo_sim/src/: auv_dynamics_plugin.cpp  vehicle_model.cpp
src/gazebo_sim/urdf/AUV/: base.xacro  snippets.xacro
